# using-pdm-flask

./: .gitignore  README.md  pyproject.toml  requirements.txt
app/: app.py  hello.py  index.py
